--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "git+ssh://git@github.com/migueldiganchi/live-community_api.git"
   },
   "keywords": [
-    "jsonlink",
+    "diario-info",
     "api"
   ],
   "author": "Miguel Diganchi",
