--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api.js"
+    "start": "node api.js"
   },
   "repository": {
     "type": "git",
