--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "mercadopago": "^1.5.17",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.2",
     "node-fetch": "^2.6.7",
     "node-nlp": "^4.24.0",
     "nodemailer": "^7.0.5",
@@ -19,7 +22,7 @@
   "devDependencies": {
     "nodemon": "^2.0.16"
   },
-  "name": "obras-ia-io_api",
+  "name": "diarioinfo-ia_api",
   "version": "1.0.0",
   "main": "api.js",
   "scripts": {
